Two TaskManager tests are flaky on debug due to a DCHECK in SharedSampler.

This is happening due to a Refresh called from a task group
which process_id is zero.

I am not sure if calling Refresh when process_id is still
zero should be supported. Perhaps that is an issue in
TaskManagerImpl / TaskGroup code, I think
https://crbug.com/521197 might be related. For now the
quick fix is move the DCHECK a bit further in the code so
it doesn't get triggered in that case.

BUG=642482

Review-Url: https://codereview.chromium.org/2293293002
Cr-Commit-Position: refs/heads/master@{#415663}

Former-commit-id: 15ee7f73c882bb282d80225c50dd50c678438696